...
                text: WiredashLocalizations.of(context)!.feedbackCancel,
                onPressed: () => state.feedbackUiState = FeedbackUiState.intro,
              ),
            ),
            Expanded(
              child: NextButton(
                key: const ValueKey('wiredash.sdk.save_feedback_button'),
                text: WiredashLocalizations.of(context)!.feedbackSave,
                icon: WiredashIcons.right,
                onPressed: _submitFeedback,
              ),
            ),
          ],
...
                onPressed: () =>
                    state.feedbackUiState = FeedbackUiState.feedback,
              ),
            ),
            Expanded(
              child: NextButton(
                key: const ValueKey('wiredash.sdk.send_feedback_button'),
                text: WiredashLocalizations.of(context)!.feedbackSend,
                icon: WiredashIcons.right,
                onPressed: _submitEmail,
              ),
            ),
          ],
...
