...
      padding: const EdgeInsets.only(top: 12, bottom: 16),
      child: Column(
        children: [
          if (options.bugReportButton) ...[
            const SizedBox(height: 12),
            ListTileButton(
              key: const ValueKey('wiredash.sdk.intro.report_a_bug_button'),
              icon: WiredashIcons.bug,
              iconColor: const Color(0xff9c4db1),
              iconBackgroundColor: const Color(0xffffc4f0),
              title: WiredashLocalizations.of(context).feedbackModeBugTitle,
              subtitle: WiredashLocalizations.of(context).feedbackModeBugMsg,
              onPressed: () => onModeSelectedCallback?.call(FeedbackType.bug),
...
